Mapped and verified that each type of request service was being transmitted to the server, updating local pending, arriving in request queue, reload of local client page shows these as still pending, approving the visit request, reload client page and shows them as confirmed / approved

--- a/petowner/online/pop-calendar-TED.html
+++ b/petowner/online/pop-calendar-TED.html
@@ -65,7 +65,7 @@
                     <li>
                         <div class="brand-holder text-lg white-text"> <span class="m-r-10"><strong>CARE</strong>PORTAL™ </span>
                             <button class=" no-margin sm-padding btn transparent thin ink-reaction btn-info btn-raised" data-toggle="modal" data-target="#bizModal" aria-expanded="true">
-                                <span id="bizNameTitle">PETLOVER LLC</span>
+                                <span id="bizNameTitle"></span>
                             </button>
                         </div>
                     </li>
@@ -139,11 +139,8 @@
             </div>
         </div>
     </header>
-
     <div class="offcanvas"></div>
-
     <div id="content">
-
         <section id="messages" class="full-bleed text-center style-error opacity-50">
             <span class=""></span>
         </section>
@@ -164,12 +161,8 @@
                                                     <li data-mode="agendaWeek"><a href="#">Week</a></li>
 
                                                     <li class="btn-group pull-right">
-                                                        <span class="width-2 m-r-10">
-                              <a id="calender-prev" class="btn-raised btn btn-icon-toggle ink-reaction width-2"><i class="fa fa-angle-left"></i></a>
-                            </span>
-                                                        <span class="width-2">
-                              <a id="calender-next" class="btn-raised btn btn-icon-toggle ink-reaction width-2"><i class="fa fa-angle-right"></i></a>
-                            </span>
+                                                        <span class="width-2 m-r-10"><a id="calender-prev" class="btn-raised btn btn-icon-toggle ink-reaction width-2"><i class="fa fa-angle-left"></i></a></span>
+                                                        <span class="width-2"> <a id="calender-next" class="btn-raised btn btn-icon-toggle ink-reaction width-2"><i class="fa fa-angle-right"></i></a></span>
                                                 </ul>
                                             </div>
 
@@ -177,8 +170,7 @@
 
                                                 <div id="calendar"></div>
 
-                                                <div class="modal fade" id="formModal" tabindex="-1" role="dialog" aria-labelledby="formModalLabel" aria-hidden="true">
-                                                </div>
+                                                <div class="modal fade" id="formModal" tabindex="-1" role="dialog" aria-labelledby="formModalLabel" aria-hidden="true"></div>
                                                 <div class="modal fade" id="ltVR-ModalContainer" tabindex="-2" role="dialog" aria-labelledby="Visit_Report_Modal" aria-hidden="true">
                                                     <div class="modal-dialog">
                                                         <div class="modal-content">
@@ -569,22 +561,15 @@
                                 <div class="headerbar-left">
                                     <ul class="header-nav header-nav-options">
                                         <li style="float: left;">
-                                            <span class="btn " style="cursor:auto">
-                        <i class=" fa fa-paw" style="color:#b43d3d"></i>
-                      </span>
+                                            <span class="btn " style="cursor:auto"><i class=" fa fa-paw" style="color:#b43d3d"></i> </span>
                                         </li>
                                         <li style="line-height:1;padding:24px 0">
-                                            <div class="brand-holder">
-                                                <span class="text-lg white-text">
-                          <small style="color:#b43d3d"><strong style="font-weight: 800">PET</strong>PROTECT™</small>
-                        </span>
+                                            <div class="brand-holder"><span class="text-lg white-text"><small style="color:#b43d3d"><strong style="font-weight: 800">PET</strong>PROTECT™</small></span>
                                             </div>
                                         </li>
                                     </ul>
-
                                 </div>
                                 <div class="headerbar-right">
-
                                     <ul class="header-nav header-nav-options list  white-text text-lighten-5 ">
                                         <li class="tile pp-tile ">
                                             <a class="tile-content ink-reaction" href="#offcanvas-pet-protect" data-toggle="offcanvas" data-backdrop="false">
@@ -620,19 +605,11 @@
                     <div class="col-sm-3 no-padding">
                         <div class="transparent">
                             <div class="small-padding">
-
                                 <style>
                                     ul li {
                                         margin: 0 0 3px 0;
                                     }
                                 </style>
-
-                                <!--
-                <ul class="list divider-full-bleed list-events" id="serviceList">
-
-                </ul>
--->
-
                                 <div class="modal fade" id="bizModal" tabindex="-1" role="dialog" aria-labelledby="formModalLabel" aria-hidden="true">
                                     <div class="modal-dialog">
                                         <div class="modal-content card rounded">
@@ -649,23 +626,19 @@
                                                             <div class="alert text-lg m-b-0" role="alert">
                                                                 <h3 class="no-margin p-t-10"><span class="blue-text" id="bizName">Business Name</span></h3>
                                                                 <br>
-                                                                <strong class="text-muted text-light m-r-5">Email:</strong> <a href="#1"><span class="blue-text id="bizEmail">service@petbiz.com</span></a>
+                                                                <strong class="text-muted text-light m-r-5">Email:</strong> <a href="#1"><span class="blue-text id="bizEmail"></span></a>
                                                                 <br>
-                                                                <strong class="text-muted text-light m-r-5" id="bizPhone">Phone:</strong> <span class="blue-text">(804) 555-5555</span>
+                                                                <strong class="text-muted text-light m-r-5" id="bizPhone">Phone:</strong> <span class="blue-text"></span>
                                                                 <br>
-                                                                <strong class="text-muted text-light m-r-5" id="bizAddress">Address:</strong> <span class="blue-text">777 Good Morning Lane</span>
+                                                                <strong class="text-muted text-light m-r-5" id="bizAddress">Address:</strong> <span class="blue-text"></span>
                                                                 <br>
-                                                                <strong class="text-muted text-light m-r-5" id="bizZip">State Zip:</strong> <span class="blue-text">Virgnia, 23226</span>
+                                                                <strong class="text-muted text-light m-r-5" id="bizZip">State Zip:</strong> <span class="blue-text"></span>
                                                                 <br>
-
                                                                 <div class="text-divider"></div>
                                                                 <div class="btn-group btn-group-justified p-t-10" role="group" aria-label="Justified button group">
-                                                                    <a href="#!" class="btn btn-default-bright" id="bizWebSite">
-                                    WEBSITE</a>
-                                                                    <a href="#!" class="btn btn-default-bright" id="bizFacebook">
-                                    FACEBOOK</a>
-                                                                    <a href="#!" class="btn btn-default-bright" id="bizLinkedIn">
-                                    LINKEDIN</a>
+                                                                    <a href="#!" class="btn btn-default-bright" id="bizWebSite">WEBSITE</a>
+                                                                    <a href="#!" class="btn btn-default-bright" id="bizFacebook">FACEBOOK</a>
+                                                                    <a href="#!" class="btn btn-default-bright" id="bizLinkedIn">LINKEDIN</a>
                                                                 </div>
 
                                                             </div>
